Catalog vertical align fix

--- a/app/assets/css/_sections/catalog/catalog-sct.sass
+++ b/app/assets/css/_sections/catalog/catalog-sct.sass
@@ -1,6 +1,8 @@
 .catalog-sct
 	&__list
 		@extend %justify-content
+		font-size: 0
+
 	&__link
 		display: inline-block
 
@@ -9,6 +11,7 @@
 		font-size: rem(26px)
 	&__item
 		display: inline-block
+		vertical-align: top
 		float: none
 		padding: rem(15px)
 		margin-bottom: rem(10px)
