--- a/app/assets/css/_sections/index/about/slider.sass
+++ b/app/assets/css/_sections/index/about/slider.sass
@@ -6,7 +6,6 @@
 		@extend %centering
 		padding: 0
 		overflow: hidden
-		height: rem(272px) // Better to change with JS for dynamics
 		+responsive('laptop')
 			left: 75%
 		+responsive('desktop')
